--- a/cmd/templates/index.html
+++ b/cmd/templates/index.html
@@ -1,11 +1,77 @@
+{{ define "index.html"}}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>{{.title}}</title>
+
+    <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
+    <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+    crossorigin="anonymous"
+    />
+
 </head>
 <body>
     
+    <nav class="navbar navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Consulta Escolar</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarColor01">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" href="#">Estudiantes</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" href="#">Materias</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" href="#">Otra cosa</a>
+                </li>
+            </ul>
+            <form class="d-flex" role="search">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-light" type="submit">Search</button>
+            </form>
+        </div>
+        </div>
+    </nav>
+
+    <form action=""></form>
+
+    <table>
+        <tr>
+            {{range .student}}
+            <td>
+                {{.Name}}
+            </td>
+            <td>
+                {{.Group}}
+            </td>
+            <td>
+                {{.Email}}
+            </td>
+            {{end}}
+        </tr>
+    </table>
+
+
+    <script>
+        const userTable = document.getElementById("")
+    </script>
+
 </body>
 </html>
+{{end}}
